[M134] Fix checkbox text in Settings > Experiments getting cropped
Fixed: 397600948
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6243393
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
(cherry picked from commit f05761f68869bc6a93a27bc522bb46fdc314492a)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6291422

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -134,6 +134,10 @@ body {
   }
 }
 
+.source-code.breakpoint {
+  white-space: nowrap;
+}
+
 .source-code .devtools-link.text-button {
   max-width: 100%;
   overflow: hidden;
